fixed overflow issue at title

--- a/app.css
+++ b/app.css
@@ -46,6 +46,8 @@ font-size: var(--title-size);
  margin-top: 8px;
  min-height: 30px;/*to avoid animation shifting the whole page when text changes*/
 background-color: transparent;
+overflow-wrap: anywhere;
+word-wrap: break-word;
 }
 @keyframes c_blink {
     0% { border-bottom:1px solid rgb(219, 219, 219); }
@@ -470,7 +472,8 @@ box-shadow: 0 0 14px rgba(241, 241, 241, 0.205);
 }
 
 .experience-card{
-    border: 1px  solid hsla(162, 87%, 70%, 0.137);
+    border: 1px  solid hsla(162, 87%, 70%, 0.137);/*darker version*/
+    /*border: 1px  solid hsl(162, 87%, 70%);*//*light version*/
     padding: 8px;
     padding-inline: 16px;
     display: flex;
